redeploy all contracts with reentrancy guard update

--- a/foundry.toml
+++ b/foundry.toml
@@ -6,7 +6,7 @@ libs = ['lib']
 [rpc_endpoints]
 goerli = "${GOERLI_RPC_URL}"
 sepolia = "${SEPOLIA_RPC_URL}"
-polygon = "${MUMBAIR_RPC_URL}"
+polygon = "${MUMBAI_RPC_URL}"
 
 [etherscan]
 goerli = { key = "${ETHERSCAN_API_KEY}" }
