--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,4 @@
 	path = lib/openzeppelin-contracts
 	url = https://github.com/openzeppelin/openzeppelin-contracts
 	branch = v4.8.1
+	ignore = dirty
